# Python-Image-Video-Analysis

./: README.md  pyproject.toml
analiza_imaginilor/: counter.py  schema functionare.drawio
